# fastapi-auth

./: README.md  pyproject.toml  settings.py
.cursor/rules/code-patterns/: RULE.md
.cursor/rules/general/: RULE.md
.github/workflows/: publish.yml
database/: db.py
fastapi_auth/cli/: __init__.py  utils.py
fastapi_auth/cli/commands/: role.py  social.py  user.py
fastapi_auth/models/: __init__.py
fastapi_auth/services/: rbac.py
migrations/: env.py
models/: __init__.py  base.py  social_providers.py  user.py
repositories/: social_provider_repository.py  user_repository.py
schemas/: user.py
services/: user_service.py
services/social/: github.py
social/: github.py
tests/integration/: test_auth_router.py
tests/unit/test_cli/: test_cli_config.py  test_cli_permission.py  test_cli_role.py  test_cli_social.py  test_cli_user.py  test_cli_utils.py
tests/unit/test_services/: test_rbac.py
utils/: jwt.py  logging.py  password.py
