[project]
name = "fastapi-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "aiosmtplib>=5.0.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "cryptography>=43.0.0",
    "fastapi[standard]>=0.128.0",
    "pydantic-extra-types>=2.11.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.45",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "ruff>=0.14.10",
]
